# stock

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  frontend-ci.yml
checklists/: README.md
docs/: CONTRACTS.md  INVARIANTS.md  PROJECT_DOCS_PLACEHOLDER.md  architecture.md  review-protocol.md  version-plan.md  wbs.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx
reviews/: README.md  wp-0-r1.md  wp-0.5-r1.md  wp-0.5-r2.md  wp-0.5-r2.patch  wp-1.1-r1.md  wp-1.1-r2.md  wp-2.1-r1.md  wp-2.5-r2.md  wp-2.7-r1.md
scripts/: generate_contracts_md.py  verify_invariants.py
src/: __init__.py  config.py  contracts.py
src/api/: main.py
src/api/routes/: public.py
src/assistant/: __init__.py
src/backtest/: INVARIANTS.md  __init__.py  _calibration_strategies.py  cli.py  data_views.py  engine.py  execution.py  metrics.py  strategies.py  walk_forward.py
src/data/: __init__.py  cache.py  cli.py  repository.py  universe.py  yfinance_adapter.py
src/db/: __init__.py  models.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_initial_schema.py  0002_add_currency.py
src/llm/: __init__.py  audit.py  gateway.py  mock.py  schemas.py
src/portfolio/: __init__.py
src/strategies/: __init__.py  base.py  factor_lib.py  factor_utils.py
src/strategies/signal_tools/: __init__.py  entry.py  exit.py  sizing.py
src/utils/: logging.py
tests/: conftest.py  test_contracts.py  test_llm_gateway.py  test_smoke.py
tests/backtest/: conftest.py  test_adj_close_used_for_returns.py  test_calibration_spy_buy_and_hold.py  test_close_used_for_decisions.py  test_data_views.py  test_engine.py  test_engine_basic.py  test_execution.py  test_execution_timing.py  test_metrics.py  test_no_lookahead.py  test_position_sizing.py  test_same_day_ordering.py  test_walk_forward.py
tests/data/: conftest.py  test_cache.py  test_cli.py  test_repository.py  test_yfinance_adapter.py
tests/strategies/: conftest.py  test_factor_lib.py  test_factor_lib_determinism.py  test_strategy_base.py
tests/strategies/signal_tools/: test_entry.py  test_exit.py  test_sizing.py
