[project]
name = "quant-system"
version = "0.0.1"
description = "LLM-augmented multi-strategy quantitative trading system (US + HK)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "quant-system contributors" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.3",

    # Scheduling
    "apscheduler>=3.10.4",

    # LLM (V0.6+ — kept here so Gateway interface compiles, but Mock used by default)
    "litellm>=1.51.0",

    # Utilities
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/db/migrations/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (FastAPI uses Depends())
    "N818",  # exception name should end with Error (pre-existing convention)
    "UP042", # prefer str+Enum over StrEnum for clearer JSON serialization semantics
    "RUF022", # allow topically-grouped __all__ rather than alphabetical
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
"src/db/migrations/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["src/db/migrations/versions"]


# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "default",
    "ignore::DeprecationWarning:passlib.*",
]
